force-app/main/default/objects/Dan360_Cuota__c/Dan360_Cuota__c.object-meta.xml
<CustomObject>
    <description>Objeto que almacenará las cuotas que se aplicán a los pedidos, para controlar las cantidades de producto que se pueden procesar en cada pedido y las cantidades que quedarán &quot;Retenidas por cuota&quot;.</description>
    <label>Cuota</label>
    <nameField>
        <displayFormat>Cuo-{0000}</displayFormat>
        <label>Nombre de Cuota</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cuotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>