force-app/main/default/objects/Dan360_Cuota__c/fields/Dan360_CanalComercial__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CanalComercial__c</fullName>
    <description>Canal comercial para el que aplicará la cuota.</description>
    <label>Canal Comercial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dan360_CanalComercial</valueSetName>
    </valueSet>
</CustomField>