force-app/main/default/objects/Dan360_Cuota__c/fields/Dan360_CanalDistribucion__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CanalDistribucion__c</fullName>
    <description>Campo que señala el canal de distribución para una cuota.</description>
    <label>Canal de distribución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venta Estándar</fullName>
            </value>
            <value>
                <fullName>Sin Cargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>