force-app/main/default/objects/Dan360_Cuota__c/fields/Dan360_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Si la cuota aplica para un cliente en específico</description>
    <label>Cliente</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Id_SAP__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuotas</relationshipLabel>
    <relationshipName>Cuotas</relationshipName>
    <type>Lookup</type>
</CustomField>