force-app/main/default/objects/Dan360_Cuota__c/fields/Dan360_Comentarios_de_anulacion__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Comentarios_de_anulacion__c</fullName>
    <description>Describe el porqué se reactivo manualmente una cuota anulada.</description>
    <label>Comentarios de reactivación</label>
    <type>TextArea</type>
</CustomField>