force-app/main/default/objects/Dan360_Cuota__c/fields/Dan360_ComentariosAnulacion__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ComentariosAnulacion__c</fullName>
    <description>Se registrará el porque fue anulada o desactivada una cuota.</description>
    <label>Comentarios de anulación</label>
    <type>TextArea</type>
</CustomField>