force-app/main/default/objects/Dan360_Cuota__c/fields/Dan360_CuentaSaldoMayorProducto__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CuentaSaldoMayorProducto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que se marca cuando se identifica que una cuota tiene un saldo mayor al de una cuota de producto</description>
    <label>Cuenta Saldo Mayor a Producto</label>
    <type>Checkbox</type>
</CustomField>