force-app/main/default/objects/Dan360_Cuota__c/fields/Dan360_Cuota__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Cuota__c</fullName>
    <description>Cuota asignada al producto.</description>
    <label>Cuota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>