force-app/main/default/objects/Dan360_Cuota__c/fields/Dan360_DireccionFacturacin_del__c.field-meta.xml
<CustomField>
    <fullName>Dan360_DireccionFacturacin_del__c</fullName>
    <description>Campo para identificar cuenta en campo Lookup</description>
    <formula>Dan360_Cliente__r.RecordType.Name + &quot;:&quot; + &quot; &quot; +  Dan360_Cliente__r.BillingStreet + &quot; &quot; +  Dan360_Cliente__r.BillingCity + &quot; &quot; +  Dan360_Cliente__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección Facturación</label>
    <type>Text</type>
</CustomField>