force-app/main/default/objects/Dan360_Cuota__c/fields/Dan360_EstadoCuota__c.field-meta.xml
<CustomField>
    <fullName>Dan360_EstadoCuota__c</fullName>
    <description>Indica el estado en el que se encuentra una cuota.</description>
    <label>Estado de cuota</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activa</fullName>
            </value>
            <value>
                <fullName>Inactiva</fullName>
            </value>
            <value>
                <fullName>Anulada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>