force-app/main/default/objects/Dan360_Cuota__c/fields/Dan360_FechaCreacion__c.field-meta.xml
<CustomField>
    <fullName>Dan360_FechaCreacion__c</fullName>
    <description>Campo que indica la fecha en que se creo el registro de la cuota.</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de creación</label>
    <type>Date</type>
</CustomField>