force-app/main/default/objects/Dan360_Cuota__c/fields/Dan360_Producto__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto para el cual aplicará la cuota.</description>
    <label>Producto</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cuotas</relationshipLabel>
    <relationshipName>Cuotas</relationshipName>
    <type>Lookup</type>
</CustomField>