force-app/main/default/objects/Dan360_Cuota__c/fields/Dan360_Saldo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Saldo__c</fullName>
    <description>Saldo que va quedando para la cuota cada vez que aplica para un pedido.</description>
    <label>Saldo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>