force-app/main/default/objects/Dan360_Cuota__c/fields/Dan360_VigenciaDesde__c.field-meta.xml
<CustomField>
    <fullName>Dan360_VigenciaDesde__c</fullName>
    <description>Campo que indica el momento desde el cual una cuota empieza a ser vigente.</description>
    <label>Vigencia desde</label>
    <type>Date</type>
</CustomField>