force-app/main/default/objects/Dan360_Cuota__c/fields/Dan360_VigenciaHasta__c.field-meta.xml
<CustomField>
    <fullName>Dan360_VigenciaHasta__c</fullName>
    <description>Fecha que indica el momento en que una cuota deja de ser vigente.</description>
    <label>Vigencia hasta</label>
    <type>Date</type>
</CustomField>