force-app/main/default/objects/Dan360_Cuota__c/validationRules/Dan360_CuentaSaldoMayorAProducto.validationRule-meta.xml
<ValidationRule>
    <fullName>Dan360_CuentaSaldoMayorAProducto</fullName>
    <active>false</active>
    <errorConditionFormula>Dan360_CuentaSaldoMayorProducto__c = true</errorConditionFormula>
    <errorMessage>La cantidad indicada no puede ser mayor al saldo actual de la cuota de producto.</errorMessage>
</ValidationRule>