force-app/main/default/objects/Dan360_Cuota__c/validationRules/Dan360_CuotaSoloNumeros.validationRule-meta.xml
<ValidationRule>
    <fullName>Dan360_CuotaSoloNumeros</fullName>
    <active>true</active>
    <description>Regla que valida que solo se ingresen números en el campo Cuota__c</description>
    <errorConditionFormula>AND(
				NOT(ISBLANK(Dan360_Cuota__c)),
    NOT(REGEX(TEXT(Dan360_Cuota__c), &quot;^[0-9]+$&quot;))
				)</errorConditionFormula>
    <errorMessage>Solo es posible ingresar números</errorMessage>
</ValidationRule>