force-app/main/default/objects/Dan360_Cuota__c/validationRules/Dan360_DatosDeCuota.validationRule-meta.xml
<ValidationRule>
    <fullName>Dan360_DatosDeCuota</fullName>
    <active>false</active>
    <description>Los datos de una cuota no pueden ser modificados una vez esta es creada</description>
    <errorConditionFormula>AND(  
				NOT( ISNEW()),
				OR(
				 ISCHANGED(Dan360_Cliente__c),
				 ISCHANGED(Dan360_VigenciaDesde__c),
				 ISCHANGED(  Dan360_Producto__c), 
				 ISCHANGED(Dan360_CanalComercial__c),  
				 ISCHANGED(Dan360_CanalDistribucion__c) 
								)
				)</errorConditionFormula>
    <errorMessage>Solo esta permitido modificar el Saldo o Estado de la Cuota</errorMessage>
</ValidationRule>