force-app/main/default/objects/Dan360_Cuota__c/validationRules/Dan360_FechaReactivacionCuota.validationRule-meta.xml
<ValidationRule>
    <fullName>Dan360_FechaReactivacionCuota</fullName>
    <active>true</active>
    <description>Validación que no permite reactivar una cuota si la fecha es en pasado</description>
    <errorConditionFormula>AND(
ISCHANGED( Dan360_EstadoCuota__c ),
ISPICKVAL(Dan360_EstadoCuota__c,&quot;Activa&quot;),
Dan360_VigenciaHasta__c &lt;  TODAY() 
)</errorConditionFormula>
    <errorDisplayField>Dan360_VigenciaHasta__c</errorDisplayField>
    <errorMessage>Debe diligenciar una fecha válida.</errorMessage>
</ValidationRule>