force-app/main/default/objects/Dan360_Cuota__c/validationRules/Dan360_FechaVigencia.validationRule-meta.xml
<ValidationRule>
    <fullName>Dan360_FechaVigencia</fullName>
    <active>true</active>
    <description>Validación que no permite crear una cuota si la fecha de vigencia está en pasado.</description>
    <errorConditionFormula>AND(
ISNEW(),
Dan360_VigenciaHasta__c &lt;  TODAY() 
)</errorConditionFormula>
    <errorDisplayField>Dan360_VigenciaHasta__c</errorDisplayField>
    <errorMessage>No es posible crear una cuota cuya vigencia esté en pasado.</errorMessage>
</ValidationRule>