force-app/main/default/objects/Dan360_Cuota__c/validationRules/Dan360_FechaVigenciaDesde.validationRule-meta.xml
<ValidationRule>
    <fullName>Dan360_FechaVigenciaDesde</fullName>
    <active>true</active>
    <description>Validación que no permite crear una cuota si la fecha de vigencia &quot;Desde&quot; es menor que la fecha de vigencia &quot;Hasta&quot;.</description>
    <errorConditionFormula>(Dan360_VigenciaDesde__c  &gt;   Dan360_VigenciaHasta__c)</errorConditionFormula>
    <errorDisplayField>Dan360_VigenciaDesde__c</errorDisplayField>
    <errorMessage>La fecha de vigencia &quot;Desde&quot; no puede ser menor a la fecha de vigencia &quot;Hasta&quot;.</errorMessage>
</ValidationRule>