force-app/main/default/objects/Dan360_Cuota__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dan360_Producto__c</columns>
    <columns>Dan360_Cliente__c</columns>
    <columns>Dan360_CanalComercial__c</columns>
    <columns>Dan360_CanalDistribucion__c</columns>
    <columns>Dan360_VigenciaDesde__c</columns>
    <columns>Dan360_VigenciaHasta__c</columns>
    <columns>Dan360_Cuota__c</columns>
    <columns>Dan360_Saldo__c</columns>
    <columns>Dan360_EstadoCuota__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>